# uart_utils

./: CMakeLists.txt  main.c  uart_loopback.c  uart_utils.c  uart_utils.h
buffer_queue/: buffer_queue.c  buffer_queue.h
buffer_utils/: buffer_utils.c  buffer_utils.h
debug_print/: debug_print.c  debug_print.h
test/: buffer_queue_test.c  main.c  queue.c  rfid.c  tilt.c  uart_monitor.c
uart_utils/: uart_loopback.c  uart_loopback.h  uart_utils.c  uart_utils.h
verification/: checksum8.c  checksum8.h  crc16.c  crc16.h
