CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT (UART_PROJECT)

SET(CMAKE_SYSTEM_NAME Linux)

AUX_SOURCE_DIRECTORY(uart_utils DIR_SRC_UART_UTILS)
AUX_SOURCE_DIRECTORY(buffer_utils DIR_SRC_BUFFER_UTILS)
AUX_SOURCE_DIRECTORY(verification DIR_SRC_VERIFICATION)
AUX_SOURCE_DIRECTORY(debug_print DIR_SRC_DEBUG_PRINT)
AUX_SOURCE_DIRECTORY(buffer_queue DIR_SRC_BUFFER_UQEUE)


SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_LIST_DIR}/uart_utils
	${CMAKE_CURRENT_LIST_DIR}/buffer_utils
	${CMAKE_CURRENT_LIST_DIR}/verification
	${CMAKE_CURRENT_LIST_DIR}/debug_print
	${CMAKE_CURRENT_LIST_DIR}/buffer_queue
)

SET(SRC_LIST_BASE
	${DIR_SRC_UART_UTILS}
	${DIR_SRC_BUFFER_UTILS}
	${DIR_SRC_VERIFICATION}
	${DIR_SRC_DEBUG_PRINT}
	${DIR_SRC_BUFFER_UQEUE}
)

SET(SRC_DEMO_TEST
	${SRC_LIST_BASE}
	test/main.c
)

ADD_EXECUTABLE(demo ${SRC_DEMO_TEST})
TARGET_LINK_LIBRARIES(demo pthread)

