CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT (UART_PROJECT)

SET(CMAKE_SYSTEM_NAME Linux)
#SET(CMAKE_C_COMPILER   mips-linux-gnu-gcc)
#SET(CMAKE_CXX_COMPILER mips-linux-gnu-g++)

#SET(CMAKE_C_FLAGS "-std=c99")
#SET(CMAKE_C_FLAGS "-g")

AUX_SOURCE_DIRECTORY(uart_utils DIR_SRC_UART_UTILS)
AUX_SOURCE_DIRECTORY(buffer_utils DIR_SRC_BUFFER_UTILS)
AUX_SOURCE_DIRECTORY(verification DIR_SRC_VERIFICATION)
AUX_SOURCE_DIRECTORY(debug_print DIR_SRC_DEBUG_PRINT)
AUX_SOURCE_DIRECTORY(buffer_queue DIR_SRC_BUFFER_UQEUE)


SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_LIST_DIR}/uart_utils
	${CMAKE_CURRENT_LIST_DIR}/buffer_utils
	${CMAKE_CURRENT_LIST_DIR}/verification
	${CMAKE_CURRENT_LIST_DIR}/debug_print
	${CMAKE_CURRENT_LIST_DIR}/buffer_queue
)

SET(SRC_LIST_BASE
	${DIR_SRC_UART_UTILS}
	${DIR_SRC_BUFFER_UTILS}
	${DIR_SRC_VERIFICATION}
	${DIR_SRC_DEBUG_PRINT}
	${DIR_SRC_BUFFER_UQEUE}
)

SET(SRC_QUEUE_TEST
	${SRC_LIST_BASE}
	test/queue.c
)

SET(SRC_UART_MONITOR
	${SRC_LIST_BASE}
	test/uart_monitor.c
)

ADD_EXECUTABLE(queue ${SRC_QUEUE_TEST})
TARGET_LINK_LIBRARIES(queue pthread)

ADD_EXECUTABLE(uart_monitor ${SRC_UART_MONITOR})
TARGET_LINK_LIBRARIES(uart_monitor pthread)

